:lipstick: Added favicon and meta tags

--- a/index.html
+++ b/index.html
@@ -3,6 +3,54 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <link rel="icon" type="image/png" href="favicon.png" />
+  <link rel="canonical" href="https://closetherings.today" />
+  <meta property="og:site_name" content="Ecclesia Close the Rings Challenge" />
+  <meta property="og:title" content="Ecclesia Close the Rings Challenge" />
+  <meta property="og:url" content="https://closetherings.today" />
+  <meta property="og:type" content="website" />
+  <meta
+    property="og:description"
+    content="Close the Rings on your Apple Watch to earn points. Take another person head-on for 7 days, and see how far you can go!"
+  />
+  <meta
+    property="og:image"
+    content="http://static1.squarespace.com/static/54ca7499e4b000c4d5583de9/t/56550193e4b027c7898c3759/1448411542230/social_icon.png?format=1500w"
+  />
+  <meta property="og:image:width" content="1116" />
+  <meta property="og:image:height" content="628" />
+  <meta itemprop="name" content="Ecclesia Close the Rings Challenge" />
+  <meta itemprop="url" content="https://closetherings.today" />
+  <meta
+    itemprop="description"
+    content="Close the Rings on your Apple Watch to earn points. Take another person head-on for 7 days, and see how far you can go!"
+  />
+  <meta
+    itemprop="thumbnailUrl"
+    content="http://static1.squarespace.com/static/54ca7499e4b000c4d5583de9/t/56550193e4b027c7898c3759/1448411542230/social_icon.png?format=1500w"
+  />
+  <link
+    rel="image_src"
+    href="http://static1.squarespace.com/static/54ca7499e4b000c4d5583de9/t/56550193e4b027c7898c3759/1448411542230/social_icon.png?format=1500w"
+  />
+  <meta
+    itemprop="image"
+    content="http://static1.squarespace.com/static/54ca7499e4b000c4d5583de9/t/56550193e4b027c7898c3759/1448411542230/social_icon.png?format=1500w"
+  />
+  <meta name="twitter:title" content="Ecclesia Close the Rings Challenge" />
+  <meta
+    name="twitter:image"
+    content="http://static1.squarespace.com/static/54ca7499e4b000c4d5583de9/t/56550193e4b027c7898c3759/1448411542230/social_icon.png?format=1500w"
+  />
+  <meta name="twitter:url" content="https://closetherings.today" />
+  <meta name="twitter:card" content="summary" />
+  <meta
+    name="twitter:description"
+    content="Close the Rings on your Apple Watch to earn points. Take another person head-on for 7 days, and see how far you can go!"
+  />
+  <meta
+    name="description"
+    content="Close the Rings on your Apple Watch to earn points. Take another person head-on for 7 days, and see how far you can go!"
+  />
   <link
     href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"
     rel="stylesheet"
