--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <link rel="icon" type="image/png" href="favicon.png" />
+  <link
+    rel="icon"
+    type="image/png"
+    href="https://images.squarespace-cdn.com/content/v1/54ca7499e4b000c4d5583de9/1445383837322-3459N4KRPBT4MJKC3PVE/ke17ZwdGBToddI8pDm48kO2pS9cMHbO4RvHPc8Skf1tZw-zPPgdn4jUwVcJE1ZvWhcwhEtWJXoshNdA9f1qD7SSwGn0TPzISNt3iSJufpcvR7xFZ2oYA-YTitnkXPCuTgiUfhLEJ_Uxi_cK3qclb8w/favicon.ico?format=100w"
+  />
   <link rel="canonical" href="https://closetherings.today" />
   <meta property="og:site_name" content="Ecclesia Close the Rings Challenge" />
   <meta property="og:title" content="Ecclesia Close the Rings Challenge" />
