:ambulance: Fixed mixed content issue in meta tags

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   />
   <meta
     property="og:image"
-    content="http://static1.squarespace.com/static/54ca7499e4b000c4d5583de9/t/56550193e4b027c7898c3759/1448411542230/social_icon.png?format=1500w"
+    content="https://static1.squarespace.com/static/54ca7499e4b000c4d5583de9/t/56550193e4b027c7898c3759/1448411542230/social_icon.png?format=1500w"
   />
   <meta property="og:image:width" content="1116" />
   <meta property="og:image:height" content="628" />
@@ -30,20 +30,20 @@
   />
   <meta
     itemprop="thumbnailUrl"
-    content="http://static1.squarespace.com/static/54ca7499e4b000c4d5583de9/t/56550193e4b027c7898c3759/1448411542230/social_icon.png?format=1500w"
+    content="https://static1.squarespace.com/static/54ca7499e4b000c4d5583de9/t/56550193e4b027c7898c3759/1448411542230/social_icon.png?format=1500w"
   />
   <link
     rel="image_src"
-    href="http://static1.squarespace.com/static/54ca7499e4b000c4d5583de9/t/56550193e4b027c7898c3759/1448411542230/social_icon.png?format=1500w"
+    href="https://static1.squarespace.com/static/54ca7499e4b000c4d5583de9/t/56550193e4b027c7898c3759/1448411542230/social_icon.png?format=1500w"
   />
   <meta
     itemprop="image"
-    content="http://static1.squarespace.com/static/54ca7499e4b000c4d5583de9/t/56550193e4b027c7898c3759/1448411542230/social_icon.png?format=1500w"
+    content="https://static1.squarespace.com/static/54ca7499e4b000c4d5583de9/t/56550193e4b027c7898c3759/1448411542230/social_icon.png?format=1500w"
   />
   <meta name="twitter:title" content="Ecclesia Close the Rings Challenge" />
   <meta
     name="twitter:image"
-    content="http://static1.squarespace.com/static/54ca7499e4b000c4d5583de9/t/56550193e4b027c7898c3759/1448411542230/social_icon.png?format=1500w"
+    content="https://static1.squarespace.com/static/54ca7499e4b000c4d5583de9/t/56550193e4b027c7898c3759/1448411542230/social_icon.png?format=1500w"
   />
   <meta name="twitter:url" content="https://closetherings.today" />
   <meta name="twitter:card" content="summary" />
