Added Fathom analytics

--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
     rel="stylesheet"
   />
   <link rel="stylesheet" href="css/styles.css" />
+    <!-- Fathom - beautiful, simple website analytics -->
+<script src="https://cdn.usefathom.com/3.js" site="ISBYSHNS"></script>
+<!-- / Fathom -->
 
   <title>Ecclesia Close the Rings Challenge</title>
 </head>
