:sparkles: Added results of Round 3

--- a/index.html
+++ b/index.html
@@ -315,15 +315,46 @@
           </div>
           <ul class="matchup">
             <li class="team team-top">
-              Abigail Bergstrom<span class="score">&nbsp;</span>
+              Abigail Bergstrom
             </li>
-            <li class="team team-bottom">
-              Noelle Hauser<span class="score">&nbsp;</span>
+            <li class="team team-bottom winner">
+              Noelle Hauser<span class="score">🏆</span>
             </li>
           </ul>
           <ul class="matchup">
             <li class="team team-top">
-              Jessi Johnson<span class="score">&nbsp;</span>
+              Jessi Johnson
+            </li>
+            <li class="team team-bottom winner">
+              David Bailey<span class="score">🏆</span>
+            </li>
+          </ul>
+          <ul class="matchup">
+            <li class="team team-top">
+              Steven Hicks
+            </li>
+            <li class="team team-bottom winner">
+              Julie Ramos<span class="score">🏆</span>
+            </li>
+          </ul>
+          <ul class="matchup">
+            <li class="team team-top">
+              Suzanne Bell
+            </li>
+            <li class="team team-bottom winner">
+              Nico Osario<span class="score">🏆</span>
+            </li>
+          </ul>
+        </div>
+        <!-- END ROUND THREE -->
+
+        <div class="round round-four current">
+          <div class="round-details">
+            Round 4<br /><span class="date">TBD</span>
+          </div>
+          <ul class="matchup">
+            <li class="team team-top">
+              Noelle Hauser<span class="score">&nbsp;</span>
             </li>
             <li class="team team-bottom">
               David Bailey<span class="score">&nbsp;</span>
@@ -331,41 +362,10 @@
           </ul>
           <ul class="matchup">
             <li class="team team-top">
-              Steven Hicks<span class="score">&nbsp;</span>
-            </li>
-            <li class="team team-bottom">
               Julie Ramos<span class="score">&nbsp;</span>
             </li>
-          </ul>
-          <ul class="matchup">
-            <li class="team team-top">
-              Suzanne Bell<span class="score">&nbsp;</span>
-            </li>
             <li class="team team-bottom">
-              Nico Osario<span class="score">&nbsp;</span>
-            </li>
-          </ul>
-        </div>
-        <!-- END ROUND THREE -->
-
-        <div class="round round-four">
-          <div class="round-details">
-            Round 4<br /><span class="date">TBD</span>
-          </div>
-          <ul class="matchup">
-            <li class="team team-top">
-              &nbsp;<span class="score">&nbsp;</span>
-            </li>
-            <li class="team team-bottom">
-              &nbsp;<span class="score">&nbsp;</span>
-            </li>
-          </ul>
-          <ul class="matchup">
-            <li class="team team-top">
-              &nbsp;<span class="score">&nbsp;</span>
-            </li>
-            <li class="team team-bottom">
-              &nbsp;<span class="score">&nbsp;</span>
+              Nico Osorio<span class="score">&nbsp;</span>
             </li>
           </ul>
         </div>
@@ -416,24 +416,24 @@
       </div>
 
       <div class="split split-two">
-        <div class="round round-four">
+        <div class="round round-four current">
           <div class="round-details">
             Round 4<br /><span class="date">TBD</span>
           </div>
           <ul class="matchup">
             <li class="team team-top">
-              &nbsp;<span class="score">&nbsp;</span>
+              Holly Bednarz<span class="score">&nbsp;</span>
             </li>
             <li class="team team-bottom">
-              &nbsp;<span class="score">&nbsp;</span>
+              Keith Suchsland<span class="score">&nbsp;</span>
             </li>
           </ul>
           <ul class="matchup">
             <li class="team team-top">
-              &nbsp;<span class="score">&nbsp;</span>
+              Luke Bergstrom<span class="score">&nbsp;</span>
             </li>
             <li class="team team-bottom">
-              &nbsp;<span class="score">&nbsp;</span>
+              Anita Lee<span class="score">&nbsp;</span>
             </li>
           </ul>
         </div>
@@ -444,35 +444,35 @@
             Round 3<br /><span class="date">April 13</span>
           </div>
           <ul class="matchup">
-            <li class="team team-top">
-              Holly Bednarz<span class="score">&nbsp;</span>
+            <li class="team team-top winner">
+              Holly Bednarz<span class="score">🏆</span>
             </li>
             <li class="team team-bottom">
-              Colin Dismuke<span class="score">&nbsp;</span>
+              Colin Dismuke
             </li>
           </ul>
           <ul class="matchup">
-            <li class="team team-top">
-              Keith Suchsland<span class="score">&nbsp;</span>
+            <li class="team team-top winner">
+              Keith Suchsland<span class="score">🏆</span>
             </li>
             <li class="team team-bottom">
-              Guillermo Chaves<span class="score">&nbsp;</span>
+              Guillermo Chaves
             </li>
           </ul>
           <ul class="matchup">
-            <li class="team team-top">
-              Luke Bergstrom<span class="score">&nbsp;</span>
+            <li class="team team-top winner">
+              Luke Bergstrom<span class="score">🏆</span>
             </li>
             <li class="team team-bottom">
-              Wayne Brown<span class="score">&nbsp;</span>
+              Wayne Brown
             </li>
           </ul>
           <ul class="matchup">
-            <li class="team team-top">
-              Anita Lee<span class="score">&nbsp;</span>
+            <li class="team team-top winner">
+              Anita Lee<span class="score">🏆</span>
             </li>
             <li class="team team-bottom">
-              Rusty Gates<span class="score">&nbsp;</span>
+              Rusty Gates
             </li>
           </ul>
         </div>
