:sparkles: Added next two rounds

--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
     rel="stylesheet"
   />
   <link rel="stylesheet" href="css/styles.css" />
-    <!-- Fathom - beautiful, simple website analytics -->
-<script src="https://cdn.usefathom.com/3.js" site="ISBYSHNS"></script>
-<!-- / Fathom -->
+  <!-- Fathom - beautiful, simple website analytics -->
+  <script src="https://cdn.usefathom.com/3.js" site="ISBYSHNS"></script>
+  <!-- / Fathom -->
 
   <title>Ecclesia Close the Rings Challenge</title>
 </head>
@@ -353,22 +353,22 @@
 
         <div class="round round-four current">
           <div class="round-details">
-            Round 4<br /><span class="date">TBD</span>
+            Round 4<br /><span class="date">April 22</span>
           </div>
           <ul class="matchup">
             <li class="team team-top">
-              Noelle Hauser<span class="score">&nbsp;</span>
+              Noelle Hauser
             </li>
-            <li class="team team-bottom">
-              David Bailey<span class="score">&nbsp;</span>
+            <li class="team team-bottom winner">
+              David Bailey<span class="score">🏆</span>
             </li>
           </ul>
           <ul class="matchup">
             <li class="team team-top">
-              Julie Ramos<span class="score">&nbsp;</span>
+              Julie Ramos
             </li>
-            <li class="team team-bottom">
-              Nico Osorio<span class="score">&nbsp;</span>
+            <li class="team team-bottom winner">
+              Nico Osario<span class="score">🏆</span>
             </li>
           </ul>
         </div>
@@ -376,16 +376,16 @@
       </div>
 
       <div class="champion">
-        <div class="semis-l">
+        <div class="semis-l current">
           <div class="round-details">
-            semifinals <br /><span class="date">TBD</span>
+            semifinals <br /><span class="date">April 30</span>
           </div>
           <ul class="matchup championship">
             <li class="team team-top">
-              &nbsp;<span class="vote-count">&nbsp;</span>
+              David Bailey<span class="vote-count">&nbsp;</span>
             </li>
             <li class="team team-bottom">
-              &nbsp;<span class="vote-count">&nbsp;</span>
+              Nico Osario<span class="vote-count">&nbsp;</span>
             </li>
           </ul>
         </div>
@@ -403,16 +403,16 @@
             </li>
           </ul>
         </div>
-        <div class="semis-r">
+        <div class="semis-r current">
           <div class="round-details">
-            semifinals <br /><span class="date">TBD</span>
+            semifinals <br /><span class="date">April 30</span>
           </div>
           <ul class="matchup championship">
             <li class="team team-top">
-              &nbsp;<span class="vote-count">&nbsp;</span>
+              Keith Suchsland<span class="vote-count">&nbsp;</span>
             </li>
             <li class="team team-bottom">
-              &nbsp;<span class="vote-count">&nbsp;</span>
+              Luke Bergstrom<span class="vote-count">&nbsp;</span>
             </li>
           </ul>
         </div>
@@ -421,22 +421,22 @@
       <div class="split split-two">
         <div class="round round-four current">
           <div class="round-details">
-            Round 4<br /><span class="date">TBD</span>
+            Round 4<br /><span class="date">April 22</span>
           </div>
           <ul class="matchup">
             <li class="team team-top">
-              Holly Bednarz<span class="score">&nbsp;</span>
+              Holly Bednarz
             </li>
-            <li class="team team-bottom">
-              Keith Suchsland<span class="score">&nbsp;</span>
+            <li class="team team-bottom winner">
+              Keith Suchsland<span class="score">🏆</span>
             </li>
           </ul>
           <ul class="matchup">
-            <li class="team team-top">
-              Luke Bergstrom<span class="score">&nbsp;</span>
+            <li class="team team-top winner">
+              Luke Bergstrom<span class="score">🏆</span>
             </li>
             <li class="team team-bottom">
-              Anita Lee<span class="score">&nbsp;</span>
+              Anita Lee
             </li>
           </ul>
         </div>
